src/test/ui/return/return-type.stderr
error[E0308]: mismatched types
  --> $DIR/return-type.rs:10:5
   |
LL | fn bar() {
   |          - possibly return type missing here?
LL |     foo(4 as usize)
   |     ^^^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |     |
   |     expected `()`, found struct `S`
   |
   = note: expected unit type `()`
                 found struct `S<usize>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
